packages/kit/test/apps/basics/src/routes/errors/status-in-layout/index.svelte
<!-- this file exists only so that /errors/status-in-layout is a valid route -->
<h1>this should not be visible</h1>
